hourtype checks in api
